# WFRecorderGUI

./: CHANGELOG.txt  Cargo.toml  LICENSE  README.md  TUI_ATAJOS.txt
data/: io.github.wf-recorder-gui.appdata.xml
scripts/: build_and_install.sh  build_appimage.sh  build_static_musl.sh  install_deps_debian.sh  install_deps_void.sh  make_xbps.sh  uninstall.sh  uninstall_deps_void.sh
scripts/void-template/: README.md  template
scripts/void-template/files/: io.github.wf-recorder-gui.desktop
src/: audio.rs  cli.rs  config.rs  errors.rs  main.rs  portals.rs  presets.rs  recorder.rs  shared.rs  tray.rs  version.rs  wayland.rs
src/ui/: gtk_app.rs  mod.rs  tui_app.rs
