[package]
name = "wf-recorder-gui"
version = "1.0.0-beta"
edition = "2021"
rust-version = "1.74"
description = "GTK3 GUI and TUI for wf-recorder on wlroots compositors"
license = "MIT"
authors = ["wf-recorder-gui contributors"]
repository = "https://github.com/users/wf-recorder-gui"
keywords = ["wayland", "wlroots", "wf-recorder", "gtk3", "screen-recorder"]
categories = ["multimedia::video", "gui"]

[[bin]]
name = "wf-recorder-gui"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# GTK3 bindings
gtk = "0.18"
glib = "0.18"
gio = "0.18"
gdk = "0.18"
pango = "0.18"

# Tray icon (StatusNotifierItem via D-Bus)
ksni = "0.2"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Async for portals
tokio = { version = "1", features = ["full"] }
ashpd = { version = "0.13", features = ["file_chooser", "global_shortcuts"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }

# Misc utilities
dirs = "5.0"
which = "6.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1666
strip = "symbols"
panic = "abort"

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"
